--- a/index.html
+++ b/index.html
@@ -4,13 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Lupus Technology | Independent Research Lab | Cyber-Physical Systems">
-    <meta name="description" content="Lupus Technology is an independent research lab pioneering intelligent architectures. Specializing in Cyber-Physical Systems, IoT smart city frameworks, and ML-driven social media security.">
-    <meta name="keywords" content="Lupus Technology, Cyber-Physical Systems, Data Science Research, IoT Architecture, Smart City, Machine Learning, Social Media Security, Bot Detection, UDYAM-MP-31-0041732">
+    <meta name="description" content="Lupus Technology is an independent research lab in Advancing Cyber-Resilience: Specialized Research in Ransomware Mitigation, Intelligent Malware Detection, and Digital Forensic Research.">
+    <meta name="keywords" content="Lupus Technology, Avdhesh Ghuraiya, Cyber-Physical Systems, Data Science Research, IoT Architecture, Smart City, Machine Learning, Social Media Security, Bot Detection, UDYAM-MP-31-0041732">
     <meta name="author" content="Lupus Technology">
     <meta name="robots" content="index, follow">
     <meta name="citation_author" content="Lupus Technology">
     <meta name="identifier" content="ORCID:0000-0002-3638-3467">
     <meta name="msme-registration" content="UDYAM-MP-31-0041732">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ResearchOrganization",
+  "name": "Lupus Technology",
+  "alternateName": "Lupus Tech",
+  "description": "Independent Research Lab in Advancing Cyber-Resilience: Specialized Research in Ransomware Mitigation, Intelligent Malware Detection, and Digital Forensic Research",
+  "url": "https://lupustechnology.github.io",
+  "identifier": "UDYAM-MP-31-0041732",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Morena",
+    "addressRegion": "Madhya Pradesh",
+    "addressCountry": "IN"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "email": "info.lupustechnology@gmail.com",
+    "contactType": "technical support"
+  },
+  "member": {
+    "@type": "Person",
+    "name": "Avdhesh Ghuraiya",
+    "jobTitle": "Lead Researcher",
+    "honorificSuffix": "M.S. Cybersecurity (Gold Medallist)",
+    "description": "PhD Candidate at Moscow Institute of Physics and Technology (MIPT), specializing in Cyber-Physical Systems and Social Media Security.",
+    "affiliation": {
+        "@type": "EducationalOrganization",
+        "name": "Moscow Institute of Physics and Technology (National Research University)"
+    },
+    "identifier": "0000-0002-3638-3467",
+    "mainEntityOfPage": "https://orcid.org/0000-0002-3638-3467"
+  },
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Research Domains",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Cyber-Physical Systems Research"
+        }
+      },
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Social Media Security Incident Detection"
+        }
+      }
+    ]
+  }
+}
+</script>
+
     <title>Lupus Technology | Independent Research Lab</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -29,7 +86,6 @@
             font-family: 'Inter', sans-serif;
             margin: 0;
             line-height: 1.6;
-            /* Prevents standard text highlighting */
             user-select: none;
             -webkit-user-select: none;
             -ms-user-select: none;
@@ -73,7 +129,7 @@
         footer { text-align: center; padding: 40px; color: #334155; font-size: 0.75rem; }
 
         @media (max-width: 600px) { h1 { font-size: 2.2rem; } .id-grid { grid-template-columns: 1fr; } }
-        .id-val, .meta {
+        .id-val, .meta, .academic-text {
             user-select: text !important;
             -webkit-user-select: text !important;
             -ms-user-select: text !important;
@@ -85,15 +141,78 @@
 <div class="container">
     <header>
         <h1>LUPUS TECHNOLOGY</h1>
-        <p class="tagline">Pioneering Intelligent Architectures: Bridging the Gap Between Data Science and Cyber-Physical Systems.</p>
+        <p class="tagline">Advancing Cyber-Resilience: Specialized Research in Ransomware Mitigation, Intelligent Malware Detection, and Digital Forensic Research.</p>
         <div class="udyam">MSME REG: UDYAM-MP-31-0041732</div>
     </header>
 
-    <div class="section-title">Researcher Profiles</div>
-    <div class="id-grid">
-        <div class="id-item"><span class="id-label">ORCID</span><span class="id-val">0000-0002-3638-3467</span></div>
-        <div class="id-item"><span class="id-label">Scopus</span><span class="id-val">59664939200</span></div>
-        <div class="id-item"><span class="id-label">ResearcherID</span><span class="id-val">PHK-0544-2026</span></div>
+    <div class="section-title">Lead Researcher</div>
+    <div class="card" style="border-left: 4px solid var(--accent);">
+        <h3 style="font-size: 1.5rem;">Er. Avdhesh Ghuraiya</h3>
+        <span class="badge">Lead Researcher</span>
+        <p class="academic-text" style="color: var(--text-main); margin-bottom: 8px;">
+            <strong>PhD Candidate</strong><br>
+            Moscow Institute of Physics and Technology (National Research University)<br>
+            <span style="font-size: 0.85rem; color: var(--text-dim);">Moscow, Russian Federation</span>
+        </p>
+        <p class="academic-text" style="border-top: 1px; color: var(--text-main); padding-top: 12px;">
+            <span style="color: var(--accent);">🏆</span> 
+            <strong>M.S. in Cybersecurity</strong> (Gold Medallist | Red Diploma)<br>
+            Moscow Institute of Physics and Technology (National Research University)<br>
+            <span style="font-size: 0.85rem; color: var(--text-dim);">Moscow, Russian Federation</span>
+        </p>
+        <p class="academic-entry" style="border-top: 1px; color: var(--text-main); padding-top: 10px;">
+           <strong>B.Tech in Computer Science and Engineering</strong><br>
+           Amity University Madhya Pradesh <br>
+           <span style="font-size: 0.85rem; color: var(--text-dim);">Gwalior, India</span>
+    </div>
+
+   <div class="section-title">Researcher Identifiers</div>
+<div class="id-grid" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+    <div class="id-item">
+        <span class="id-label">ORCID</span>
+        <span class="id-val">0000-0002-3638-3467 | 
+            <a href="https://orcid.org/0000-0002-3638-3467" target="_blank" style="color: var(--accent); text-decoration: none; font-weight: 600;">View Profile ↗</a>
+        </span>
+    </div>
+
+    <div class="id-item">
+        <span class="id-label">Scopus</span>
+        <span class="id-val">59664939200</span>
+    </div>
+
+    <div class="id-item">
+        <span class="id-label">ResearcherID</span>
+        <span class="id-val">PHK-0544-2026</span>
+    </div>
+    <div class="id-item">
+        <span class="id-label">Google Scholar</span>
+        <span class="id-val">
+            <a href="https://scholar.google.com/citations?hl=en&user=jNpCkfsAAAAJ" target="_blank" style="color: var(--accent); text-decoration: none; font-weight: 600;">View Progile ↗</a>
+        </span>
+    </div>
+</div>
+
+    <div class="section-title">Peer-Reviewed Publications</div>
+    
+    <div class="card">
+        <span class="badge">New Release</span>
+        <h3>Ensemble models for social media security incident detection</h3>
+        <p>This Study investigates how two simple machine learning models, Support Vector Machines (SVM) and Multilayer Perceptrons (MLP), perform at detecting suspicious accounts on social media. </p>
+        <div class="meta">Status: In Publishing | High-tech technologies in space exploration of the Earth, Russia | K2 HAC Russia </div>
+    </div>
+
+    <div class="card">
+        <span class="badge">Journal Paper</span>
+        <h3>Comparative Bot Detection Random Forest versus XGBoost in Social Networks</h3>
+        <p>This study investigates the detection of automated accounts (bots) on social networks by comparing the behavior and performance of Random Forest and XGBoost classifiers under realistic, minimally tuned conditions. </p>
+        <div class="meta">Status: In Publishing | Synchroinfo Journal, Vienna</div>
+    </div>
+
+    <div class="card">
+        <span class="badge">Conference Paper</span>
+        <h3>IoT System architecture for a smart city</h3>
+        <p>Proposed architecture for resilient, large-scale municipal sensor networks.</p>
+        <div class="meta">Status: Oct 2024 | DOI: 10.1109/ICCT62929.2024.10874931</div>
     </div>
 
     <div class="section-title">Intellectual Property</div>
@@ -102,29 +221,6 @@
         <h3>Environment monitoring computer with sensors for collecting and processing data</h3>
         <p>Decentralized computational framework for high-integrity environmental sensing.</p>
         <div class="meta">Grant Date: 06/03/2025 | UK IPO</div>
-    </div>
-
-    <div class="section-title">Peer-Reviewed Publications</div>
-    
-    <div class="card">
-        <span class="badge">New Release • K2 HAC Russia</span>
-        <h3>Ensemble models for social media security incident detection</h3>
-        <p>Utilizing high-tech technologies for earth exploration and digital security infrastructure.</p>
-        <div class="meta">Status: In Publishing | High-tech technologies in space exploration of the Earth</div>
-    </div>
-
-    <div class="card">
-        <span class="badge">Journal Paper</span>
-        <h3>Bot Detection: Random Forest versus XGBoost in Social Networks</h3>
-        <p>Comparative performance analysis of ensemble classifiers in social network topologies.</p>
-        <div class="meta">Status: In Publishing | Synchroinfo Journal, Vienna</div>
-    </div>
-
-    <div class="card">
-        <span class="badge">Conference Paper</span>
-        <h3>IoT System architecture for a smart city</h3>
-        <p>Proposed architecture for resilient, large-scale municipal sensor networks.</p>
-        <div class="meta">DOI: 10.1109/ICCT62929.2024.10874931</div>
     </div>
 
     <div class="contact-footer">
@@ -153,7 +249,11 @@
             return false;
         }
     });
-    document.addEventListener('selectstart', e => e.preventDefault());
+    document.addEventListener('selectstart', e => {
+        if (!e.target.closest('.id-val') && !e.target.closest('.meta') && !e.target.closest('.academic-text')) {
+            e.preventDefault();
+        }
+    });
 </script>
 
 </body>
