--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="citation_author" content="Lupus Technology">
     <meta name="identifier" content="ORCID:0000-0002-3638-3467">
     <meta name="msme-registration" content="UDYAM-MP-31-0041732">
+    <meta name="google-site-verification" content="qJGMN4fix4tBJfCIKAbDgf-5lATCRLHrt1K00ZxvBHQ" />
 
 <script type="application/ld+json">
 {
