--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="identifier" content="ORCID:0000-0002-3638-3467">
     <meta name="msme-registration" content="UDYAM-MP-31-0041732">
     <meta name="google-site-verification" content="qJGMN4fix4tBJfCIKAbDgf-5lATCRLHrt1K00ZxvBHQ" />
+    <link rel="canonical" href="https://lupustechnology.github.io/" />
 
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
