--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             
             <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.borderColor='var(--logo-cyan)'" onmouseout="this.style.borderColor='rgba(255,255,255,0.05)'">
                 <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">General Inquiry</span>
-                <a href="mailto:info.lupustechnology@gmail.com" style="color: #fff; text-decoration: none; font-size: 0.9rem; font-family: monospace;">info.lupustechnology@gmail.com</a>
+                <a href="mailto:info.lupustechnology@gmail.com" style="word-break: break-all; color: #fff; text-decoration: none; font-size: 0.9rem; font-family: monospace;">info.lupustechnology@gmail.com</a>
             </div>
 
             <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.borderColor='var(--logo-cyan)'" onmouseout="this.style.borderColor='rgba(255,255,255,0.05)'">
