--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Lupus Technology, Avdhesh Ghuraiya, Cyber-Physical Systems, Data Science Research, IoT Architecture, Smart City, Machine Learning, Social Media Security, Bot Detection, UDYAM-MP-31-0041732">
     <meta name="author" content="Lupus Technology">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://lupustechnology.github.io/" />
+    <link rel="canonical" href="https://lupustechnology.github.io/">
     <link rel="icon" type="image/x-icon" href="logo.jpeg">
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-R8D51FPXEX"></script>
@@ -42,7 +42,7 @@
             -webkit-user-select: none;
         }
 
-        .container { max-width: 900px; margin: 0 auto; padding: 40px 20px; }
+        .container { max-width: 900px; margin: 0 auto; padding: 20px 20px; }
 
         header { text-align: center; margin-bottom: 50px; }
         
@@ -144,7 +144,6 @@
         .id-label { font-size: 0.99rem; color: var(--text-dim); text-transform: uppercase; display: block; margin-bottom: 5px; }
         .id-val { font-size: 0.75rem; font-family: monospace; color: #fff; }
 
-        .contact-footer { margin-top: 80px; padding: 40px 20px; border-top: 1px solid rgba(255,255,255,0.05); text-align: center; }
         .email-link { color: var(--text-dim); text-decoration: none; font-size: 0.85rem; margin: 10px; display: inline-block; transition: all 0.3s; padding: 8px 15px; border-radius: 10px; background: rgba(255,255,255,0.03); }
         .email-link:hover { color: #fff; background: rgba(255,255,255,0.08); }
 
@@ -278,7 +277,7 @@
         </div>
     </div>
 
-    <div class="contact-footer">
+    
        <div class="section-title" style="justify-content: center;">Contact Laboratory</div>
     <div class="card" style="background: linear-gradient(145deg, rgba(30, 41, 59, 0.6), rgba(15, 23, 42, 0.9)); border: 1px solid rgba(99, 102, 241, 0.3); padding: 40px 20px;">
         <div style="text-align: center; margin-bottom: 35px;">
@@ -306,7 +305,6 @@
             </div>
 
         </div>
-    </div>
     </div>
 
     <footer>
