--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         .container { max-width: 900px; margin: 0 auto; padding: 20px 20px; }
 
-        header { text-align: center; margin-bottom: 50px; }
+        header { text-align: center;}
         
         .brand-container {
             display: flex;
@@ -113,7 +113,7 @@
         .tagline { color: var(--text-dim); margin-top: 20px; font-weight: 300; font-size: 1rem; max-width: 650px; margin-left: auto; margin-right: auto; line-height: 1.6; }
         .udyam { font-size: 0.7rem; color: var(--text-dim); margin-top: 12px; font-family: monospace; opacity: 0.5; }
 
-        .section-title { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 0.2em; color: var(--accent); margin: 50px 0 25px; display: flex; align-items: center; font-weight: 700; }
+        .section-title { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 0.2em; color: var(--accent); margin-bottom: 25px; display: flex; align-items: center; font-weight: 700; }
         .section-title::after { content: ""; height: 1px; flex-grow: 1; background: linear-gradient(to right, var(--accent), transparent); margin-left: 15px; }
 
         .card { 
