--- a/index.html
+++ b/index.html
@@ -324,9 +324,10 @@
     </div>
 
     <footer>
-        &copy; 2026 Lupus Technology &bull; Independent Research Laboratory &bull; Unauthorized reproduction prohibited.
+        &copy; 2026 Lupus Technology &bull; Independent Research Laboratory &bull; Unauthorized reproduction prohibited.<br>
+    Licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" style="color:inherit; text-decoration:underline;">CC BY-NC-ND 4.0</a><br>
+    Unauthorized reproduction or commercial use is strictly prohibited.
     </footer>
 </div>
-
 </body>
 </html>
