--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
             color: var(--logo-cyan);
         }
 
+        .contact-link {display: block; word-break: normal; overflow-wrap: anywhere; color: #fff; text-decoration: none; font-size: 0.9rem;
+            font-family: monospace;}
+
         .tagline { color: var(--text-dim); margin-top: 20px; font-weight: 300; font-size: 1rem; max-width: 650px; margin-left: auto; margin-right: auto; line-height: 1.6; }
         .udyam { font-size: 0.7rem; color: var(--text-dim); margin-top: 12px; font-family: monospace; opacity: 0.5; }
 
@@ -148,7 +151,7 @@
         .email-link { color: var(--text-dim); text-decoration: none; font-size: 0.85rem; margin: 10px; display: inline-block; transition: all 0.3s; padding: 8px 15px; border-radius: 10px; background: rgba(255,255,255,0.03); }
         .email-link:hover { color: #fff; background: rgba(255,255,255,0.08); }
 
-        footer { text-align: center; padding: 40px; color: #334155; font-size: 0.7rem; }
+        footer { text-align: center; padding: 60px 40px; color: #94a3b8; font-size: 0.85rem; }
 
         @media (max-width: 600px) { 
             .brand-container { flex-direction: column; text-align: center; }
@@ -160,9 +163,10 @@
             .research-row {flex-direction: column;}
             .column-right {flex-direction: column;}  
             .column-left, .column-right {flex: none; width: 100%;}
+            .contact-link {word-break: break-all; font-size: 0.8rem;}
         }
 
-        .id-val, .meta, .academic-text { user-select: text !important; -webkit-user-select: text !important; }
+        .id-val, .meta, .academic-text { user-select: text !important; -webkit-user-select: text !important; -ms-user-select: text !important;}
     </style>
         <script>
     document.addEventListener('contextmenu', (e) => e.preventDefault());
@@ -307,26 +311,30 @@
             
             <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.borderColor='var(--logo-cyan)'" onmouseout="this.style.borderColor='rgba(255,255,255,0.05)'">
                 <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">General Inquiry</span>
-                <a href="mailto:info.lupustechnology@gmail.com" style="word-break: break-all; color: #fff; text-decoration: none; font-size: 0.9rem; font-family: monospace;">info.lupustechnology@gmail.com</a>
+                <a href="mailto:info.lupustechnology@gmail.com" class="contact-link">info.lupustechnology@gmail.com</a>
             </div>
 
             <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.borderColor='var(--logo-cyan)'" onmouseout="this.style.borderColor='rgba(255,255,255,0.05)'">
                 <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">Research Related</span>
-                <a href="mailto:research.lupustechnology@gmail.com" style="word-break: break-all; color: #fff; text-decoration: none; font-size: 0.9rem; font-family: monospace;">research.lupustechnology@gmail.com</a>
+                <a href="mailto:research.lupustechnology@gmail.com" class="contact-link">research.lupustechnology@gmail.com</a>
             </div>
 
             <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.borderColor='var(--logo-cyan)'" onmouseout="this.style.borderColor='rgba(255,255,255,0.05)'">
                 <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">Manuscript Related</span>
-                <a href="mailto:lupustechnology.research@gmail.com" style="word-break: break-all; color: #fff; text-decoration: none; font-size: 0.9rem; font-family: monospace;">lupustechnology.research@gmail.com</a>
+                <a href="mailto:lupustechnology.research@gmail.com" class="contact-link">lupustechnology.research@gmail.com</a>
             </div>
 
         </div>
     </div>
 
     <footer>
-        &copy; 2026 Lupus Technology &bull; Independent Research Laboratory &bull; Unauthorized reproduction prohibited.<br>
-    Licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" style="color:inherit; text-decoration:underline;">CC BY-NC-ND 4.0</a><br>
-    Unauthorized reproduction or commercial use is strictly prohibited.
+        <div>&copy; 2026 <strong>Lupus Technology</strong> &bull; Independent Research Laboratory</div>
+    <div style="margin-top: 5px; opacity: 0.8;">
+        Licensed under <a href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a>
+    </div>
+    <div style="font-size: 0.75rem; margin-top: 10px; color: #64748b;">
+        Unauthorized reproduction or commercial exploitation is strictly prohibited.
+    </div>
     </footer>
 </div>
 </body>
