--- a/index.html
+++ b/index.html
@@ -309,18 +309,18 @@
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-bottom: 10px;">
             
             <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.borderColor='var(--logo-cyan)'" onmouseout="this.style.borderColor='rgba(255,255,255,0.05)'">
-                <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">General Inquiry</span>
-                <a href="mailto:info.lupustechnology@gmail.com" class="contact-link">info.lupustechnology@gmail.com</a>
+                <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; text-align: center; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">General Inquiry</span>
+                <a href="mailto:info.lupustechnology@gmail.com" class="contact-link" style="text-align: center;">info.lupustechnology@gmail.com</a>
             </div>
 
             <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.borderColor='var(--logo-cyan)'" onmouseout="this.style.borderColor='rgba(255,255,255,0.05)'">
-                <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">Research Related</span>
-                <a href="mailto:research.lupustechnology@gmail.com" class="contact-link">research.lupustechnology@gmail.com</a>
+                <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; text-align: center; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">Research Related</span>
+                <a href="mailto:research.lupustechnology@gmail.com" class="contact-link" style="text-align: center;">research.lupustechnology@gmail.com</a>
             </div>
 
             <div style="background: rgba(255,255,255,0.03); padding: 20px; border-radius: 15px; border: 1px solid rgba(255,255,255,0.05); transition: 0.3s;" onmouseover="this.style.borderColor='var(--logo-cyan)'" onmouseout="this.style.borderColor='rgba(255,255,255,0.05)'">
-                <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">Manuscript Related</span>
-                <a href="mailto:lupustechnology.research@gmail.com" class="contact-link">lupustechnology.research@gmail.com</a>
+                <span style="font-size: 0.65rem; color: var(--logo-cyan); text-transform: uppercase; font-weight: 700; text-align: center; letter-spacing: 0.1em; display: block; margin-bottom: 8px;">Manuscript Related</span>
+                <a href="mailto:lupustechnology.research@gmail.com" class="contact-link" style="text-align: center;">lupustechnology.research@gmail.com</a>
             </div>
 
         </div>
