--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
 </script>
 </head>
 <body>
+    <nav style="position: sticky; top: 0; background: rgba(3, 7, 18, 0.9); backdrop-filter: blur(10px); z-index: 1000; padding: 15px 0; border-bottom: 1px solid rgba(255,255,255,0.1); text-align: center;">
+    <a href="#research" style="color: #fff; text-decoration: none; margin: 0 15px; font-size: 0.8rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Research</a>
+    <a href="#publications" style="color: #fff; text-decoration: none; margin: 0 15px; font-size: 0.8rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Publications</a>
+    <a href="#patents" style="color: #fff; text-decoration: none; margin: 0 15px; font-size: 0.8rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Patents</a>
+    <a href="#contact" style="color: var(--logo-cyan); text-decoration: none; margin: 0 15px; font-size: 0.8rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Contact</a>
+     </nav>
 
 <div class="container">
     <header>
@@ -239,8 +245,7 @@
         <p class="tagline">Advancing Cyber-Resilience: Specialized Research in Ransomware Mitigation, Intelligent Malware Detection, and Digital Forensic Research.</p>
         <div class="udyam">Registered in MSME and District Industeries Office</div>
     </header>
-
-  <div class="research-row">
+  <div id="research" class="research-row">
     <div class="column-left">
         <div style="width: 100%;">
             <div class="section-title">Lead Researcher</div>
@@ -261,11 +266,9 @@
             </div>
         </div>
     </div>
-
     <div class="column-right">
         <div style="height: 100%; display: flex; flex-direction: column;">
             <div class="section-title">Researcher Identifiers</div>
-            
             <div style="display: flex; flex-direction: column; gap: 15px; flex-grow: 1;">
                 <div class="id-item" style="flex: 1; display: flex; flex-direction: column; justify-content: center; min-height: 80px;">
                     <span class="id-label">ORCID</span>
@@ -284,8 +287,7 @@
         </div>
     </div>
 </div>
-
-    <div class="section-title">Peer-Reviewed Publications</div>
+    <div id="publications" class="section-title">Peer-Reviewed Publications</div>
     <div class="card">
         <div class="pub-item">
             <span class="badge">Final Draft</span>
@@ -321,8 +323,7 @@
             </div>
         </div>
     </div>
-
-    <div class="section-title">Intellectual Property</div>
+    <div id="patents" class="section-title">Intellectual Property</div>
     <div class="card">
         <div class="pub-item">
             <span class="badge">UK Design Patent</span>
@@ -332,7 +333,7 @@
         </div>
     </div>
 
-       <div class="section-title" style="justify-content: center;">Contact Laboratory</div>
+       <div id="contact" class="section-title" style="justify-content: center;">Contact Laboratory</div>
     <div class="card" style="background: linear-gradient(145deg, rgba(30, 41, 59, 0.6), rgba(15, 23, 42, 0.9)); border: 1px solid rgba(99, 102, 241, 0.3); padding: 40px 20px;">
         <div style="text-align: center; margin-bottom: 35px;">
             <h3 style="font-size: 1.6rem; letter-spacing: -0.01em;">Global Research Inquiries</h3>
