--- a/index.html
+++ b/index.html
@@ -305,10 +305,11 @@
         </div>
 
         <div class="pub-item">
-            <span class="badge">In-Publishing</span>
+            <span class="badge">Published</span>
             <h3>Comparative Bot Detection Random Forest versus XGBoost in Social Networks</h3>
             <p><strong>The Investigation:</strong> A rigorous benchmarking of ensemble learning efficiency. We analyzed the trade-offs between computational latency and detection precision, specifically focusing on how gradient boosting handles adversarial perturbations in automated bot traffic.</p>
-            <div class="meta">Venue: Synchroinfo Journal, Vienna, Austria</div>
+            <div class="meta">Venue: Synchroinfo Journal, Vienna, Austria<br>
+            Date: Dec 2025 | DOI: <a href="https://doi.org/10.36724/2664-066X-2025-11-6-12-22" target="_blank">10.36724/2664-066X-2025-11-6-12-22</a></div>
         </div>
     </div>
 
